crates/ika-protocol-config/src/snapshots/ika_protocol_config__test__version_1.snap
---
source: crates/ika-protocol-config/src/lib.rs
assertion_line: 592
expression: "ProtocolConfig::get_for_version(cur, *chain_id)"
---
version: 1
feature_flags: {}
max_messages_per_checkpoint: 1000
max_checkpoint_size_bytes: 118784
buffer_stake_for_protocol_upgrade_bps: 5000
min_checkpoint_interval_ms: 200
consensus_bad_nodes_stake_threshold: 20

